samples/_failures_safe/1761561689_006075_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4f09490.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_c4f09490.c:162:13: error: expected ‘;’ at end of input
  162 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_c4f09490.c:162:5: error: expected declaration or statement at end of input
  162 |     return 1
      |     ^~~~~~
